# spendwise

./: .gitignore  .taurignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: index.html
src/: db.ts  icons.ts  main.ts  styles.css  types.ts  updater.ts
src-tauri/: Cargo.toml  expense-tracker.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: addExpense.ts  categories.ts  dashboard.ts  fixedExpenses.ts  history.ts  monthlySummary.ts  reports.ts  settings.ts
src/utils/: charts.ts  format.ts
