[package]
name = "expense-tracker"
version = "0.1.0"
description = "A daily expense tracker desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "expense_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
